--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -6,7 +6,7 @@ on:
       - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
   workflow_dispatch: # Required even though this is currently empty
   schedule:
-    - cron: '*/5 * * * *' # Run this workflow every 5 minutes
+    - cron: '*/2 * * * *' # Run this workflow every 2 minutes
 
 jobs:
   scheduled:
@@ -27,3 +27,4 @@ jobs:
           # The data to fetch
           http_url: https://api.openweathermap.org/data/2.5/weather?zip=06089,us&units=imperial&appid=2f6693b9f4d46362910292a9f0ad0bba
           downloaded_filename: weather-06089.json
+          postprocess: weather.ts
