--- a/.github/workflows/flatxml.yml
+++ b/.github/workflows/flatxml.yml
@@ -35,3 +35,9 @@ jobs:
           http_url: https://api.openweathermap.org/data/2.5/weather?mode=xml&zip=07093,us&units=imperial&appid=2f6693b9f4d46362910292a9f0ad0bba
           downloaded_filename: weather-07093.xml
 #          postprocess: weather-xml.ts
+      - name: Fetch 34698 data 
+        uses: githubocto/flat@v2
+        with:
+          http_url: https://api.openweathermap.org/data/2.5/weather?mode=xml&zip=34698,us&units=imperial&appid=2f6693b9f4d46362910292a9f0ad0bba
+          downloaded_filename: weather-34698.xml
+#          postprocess: weather-xml.ts
